src/App.css
* {
  box-sizing: border-box;
}

body {
  margin: 0;
  padding: 0;
  font-family: sans-serif;
  background-color: #3b3b3b;
}

.App {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
}

h1 {
  color: white;
  font-size: 40px;
  font-family: Arial, Helvetica, sans-serif;
}

nav, footer {
  background-color: rgba(0, 0, 0, 0.5);
  width: 100%;
  display: flex;
  justify-content: space-between;
}

.nav-title {
  margin-left: 5vw;
}

nav a {
  font-size: 20px;
  margin-right: 5vw;
  font-family: Arial, Helvetica, sans-serif;
  text-align: center;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

p {
  color: white;
  font-size: 20px;
  font-family: Arial, Helvetica, sans-serif;
}

.file-upload-processing {
  height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

#input-file-upload {
  display: none;
}

#file-upload-drag-area {
  background-color: #4d4d4d;
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin-top: 50px;
  border: 3px dashed #ffffff;
  border-radius: 5px;
  padding: 20px;
  width: 50%;
  height: 300px;
}

#file-upload-drag-area:hover {
  opacity: 0.5;
  cursor: pointer;
}

#file-upload-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
  height: 100%;
}

.drag-active {
  opacity: 0.5;
}

.upload-button {
  background-color: #4CAF50;
  border: none;
  color: white;
  padding: 15px 32px;
  text-align: center;
  text-decoration: none;
  font-size: 16px;
  margin: 4px 2px;
  cursor: pointer;
}

.upload-button:hover {
  background-color: #3e8e41;
  text-decoration: underline;
}

.images-container {
  min-height: 100vh;
  max-height: auto;
}

.image-grid {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
  grid-gap: 20px;
}

.grid-item {
  display: flex;
  flex-direction: column;
}

.grid-img-container {
  width: 100%;
  height: 0;
  padding-bottom: 100%;
  position: relative;
}

.grid-img-container img {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
}

button {
  margin: 50px 0;
  display: inline-block;
  padding: 20px 40px;
  font-size: 16px;
  font-weight: bold;
  text-align: center;
  text-decoration: none;
  border-radius: 4px;
  border: none;
  background-color: #4CAF50;
  color: #FFFFFF;
  transition: background-color 0.3s ease;
  cursor: pointer;
}

button:hover {
  background-color: #45a049;
}

button:active {
  background-color: #3e8e41;
}

a {
  color: #15f53a;
  text-decoration: underline;
}

a:hover {
  color: #3e8e41;
  cursor: pointer;
}

.about-text {
  width: 60%;
  background-color: #131313;
  padding: 20px;
  margin: 40px;
  border-radius: 10px;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
}

.about-text h3 {
  color: #ffffff;
  font-size: 25px;
  margin-bottom: 10px;
  font-family: Arial, Helvetica, sans-serif;
}

.about-text p {
  color: #ffffff;
  line-height: 1.5;
  font-size: 18px;
  font-family: Arial, Helvetica, sans-serif;
}

.about-text ul {
  color: #ffffff;
  text-align: left;
}

.about-text ul li {
  margin-bottom: 5px;
}

h3 {
  color: white;
  font-size: 20px;
  font-family: Arial, Helvetica, sans-serif;
}

.grid-img-title {
  color:#15f53a;
  font-size: 20px;
  margin-top: 20px;
  font-family: Arial, Helvetica, sans-serif;
  word-wrap: break-word;
}

.grid-img-title:hover {
  color: #3e8e41;
}

#upload-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
  height: 100%;
}

.popup-overlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.6);
  display: flex;
  justify-content: center;
  align-items: center;
}

.popup-content {
  height: 75%;
  width: 50%;
  background-color: rgba(0, 0, 0, 0.98);
  padding: 20px 40px;
  border-radius: 10px;
  text-align: center;
  overflow-y: auto;
  overflow-x: auto;
}

@media (max-width: 1000px) {
  .popup-content {
    width: 100%;
    overflow-x: scroll;
  }

  table {
    width: 100%;
    white-space: nowrap;
  }
}

.popup-close {
  display: flex;
  justify-content: right;
}

#popup-close-btn {
  background-color: red;
  padding: 5px 10px;
  font-size: 20px;
  cursor: pointer;
  margin: 0;
}

#popup-close-btn:hover {
  background-color: #df0b0b;
}

#popup-title {
  margin-top: 10px;
  margin-bottom: 20px;
  color: rgb(236, 236, 236);
}

table {
  width: 100%;
  border-collapse: collapse;
  border-spacing: 0;
  border-radius: 10px;
  background-color: #333;
  color: #fff;
  border-radius: 4px;
}

th {
  background-color: #111;
  color: #fff;
  font-weight: bold;
  padding: 10px;
  text-align: center;
  border-bottom: 1px solid #ddd;
}

tr {
  background-color: #222;
}

tr:nth-child(even) {
  background-color: #111;
}

td {
  padding: 10px;
  border-bottom: none;
}

#meta-download {
  margin-top: 20px;
}

.loading-spinner {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 50%;
  width: 100%;
}

.app-logo {
  animation: rotate 2s linear infinite;
  width: 100%;
  height: 100%;
}

@keyframes rotate {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

/*# auth components */
section {
  width: 100%;
  max-width: 420px;
  min-height: 400px;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  padding: 1rem;
  background-color: rgba(0,0,0,0.4);
  margin: 2rem;
}


form {
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  flex-grow: 1;
  padding-bottom: 1rem;
}


input[type="text"],
input[type="password"],
button,
textarea {
  font-family: sans-serif;
  font-size: 22px;
  padding: 0.25rem;
  border-radius: 0.5rem;
}

label {
  color:#fff;
}

label,
button {
  margin-top: 1rem;
}

button {
  padding: 0.5rem;
}


button.active:hover {
  cursor: pointer;
  border: #fff 2px solid;
  opacity: 0.5;
}

.instructions {
    font-size: 0.75rem;
    border-radius: 0.5rem;
    background: #000;
    color: #fff;
    padding: 0.25rem;
    position: relative;
    bottom: -10px;
}

.instructions > svg {
    margin-right: 0.25rem;
}

.offscreen {
    position: absolute;
    left: -9999px;
}

.hide {
    display: none;
}

.valid {
    color: limegreen;
    margin-left: 0.25rem;
}

.invalid {
    color: red;
    margin-left: 0.25rem;
}

.line {
    display: inline-block;
}

